[project]
name = "iacs-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arq>=0.26.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "fastcrud>=0.15.12",
    "geoalchemy2>=0.17.1",
    "logging>=0.4.9.6",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
]
